fix GalleryEdit breadcrumbs wrap on mobile

--- a/src/pages/NurseryGallery/styles.scss
+++ b/src/pages/NurseryGallery/styles.scss
@@ -29,6 +29,9 @@
         img {
             width: 150px;
         }
+        h4 {
+            font-weight: normal;
+        }
     }
     &__info {
         width: 300px;
@@ -119,6 +122,9 @@
             span {
                 font-size: 32px;
             }
+        }
+        &.wrap {
+            white-space: initial;
         }
     }
 }
